Fix wrong margin in FF

--- a/mapBuilder/www/css/main.css
+++ b/mapBuilder/www/css/main.css
@@ -120,7 +120,7 @@ table.fancytree-ext-table tbody tr.fancytree-active {
 	right: .5em;
 }
 .ol-touch .ol-zoom-origin {
-	top: 110px;
+	top: 115px;
 }
 
 .ol-export-pdf {
